Changelog for GEMC
==================

1/16/18
 - added G4SynchrotronRadiationInMat. SYNRAD option activate that one if it is set to 2.

1/10/18
 - added G4SynchrotronRadiation process, off by default, activated with option SYNRAD

1/5/18
 - fixes case where no background file was provided
 - making gcc happier (silencing comparison warnings and unused vars)

12/12/17
 - background hits merging mechanism ready for testing

12/8/17
 - background read and passed correctly to SD

12/7/17
 - background hits read from file finalized

12/6/17
 - removed obsolete DetectorMessenger
 - startint to read hits from bg file

12/5/17
 - infrastructure for background merging
 - option to load background hits from ascii file
 - opening ascii file

11/13/17
 - added option G4FIELDCACHESIZE to set the geant4 field cache size. 

11/7/17
 - removed unnecessary checks on hitType: it will never be mirror:. Good catch by Angus Hollands. Addressed issue 116
 - added txt_simple output format (Contribution by Angus Hollands): removed some formatting and makes txt output easier to parse.

11/2/17
 - renamed variable id to gid in gbank class

10/31/17
 - added mu+ and mu- to top of list in the gui

10/30/17
 - fixed mismatch typo for internal generator
 - preferred directions on field is "z". Added else to skip cases in expensive method GetFieldValue
 - fixed bug in dipole field calculation: the transverse coordinate was not computed correctly in some cases.

10/23/17
 - added mfield attribute for CAD volumes in cad.gxml

10/18/17
- moving GENERATED_USE_INFO_TAG bank outside the GENERATED_PARTICLES_BANK_TAG

10/17/17
 - added user info header bank, passed by generator
 - user info produced by both evio and txt output factories

10/11/17
 - user info bank defaulted to size 25, indexed by particle like the rest of the bank

10/3/17
 - added detector threshold variable detectorThreshold that can be set and used in the digitization routine in conjuction with writeHit