@@ -69,22 +69,12 @@ private:
 	string ELECTRONICNOISE;  ///< List of detectors for which electronic noise routines will be called
 	int fastMCMode;          ///< In fast MC mode, the particle smeared/unsmeared momenta are saved
 
-	// background hits, key is event number
-	map<int, vector<BackgroundHit*> > *backgroundHits;
-
-	// bookkeeping of background events
-	int backgroundEventNumber;
-	vector<BackgroundHit*> currentBackground;
-	vector<BackgroundHit*> getNextBackgroundEvent();
-
 
 public:
 	vector<identifier> GetDetectorIdentifier(string name) {return (*hallMap)[name].identity;} ///< returns detector identity
 	string GetDetectorHitType(string name)                {return (*hallMap)[name].hitType;}  ///< returns detector hitType
 	MHitCollection* GetMHitCollection()                   {if(hitCollection) return hitCollection; else return NULL;}              ///< returns hit collection
 	MHit* find_existing_hit(vector<identifier>);                                               ///< returns hit collection hit inside identifer
-
-	void setBackgroundHits(map<int, vector<BackgroundHit*> > *bgh) {backgroundHits = bgh;}
 
 	int processID(string procName);   // return an ID from a process name.
 };
